# clash-cli.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  uninstall.sh
src/: ai.rs  ai_config.rs  ai_protocol.rs  ai_tools.rs  api.rs  auto_sudo.rs  cli.rs  constants.rs  core.rs  http.rs  main.rs  mixin.rs  output.rs  paths.rs  profile.rs  proxy.rs  service.rs  setup.rs  tun.rs  update.rs  utils.rs
src/tun/: checks.rs  config.rs  detect.rs  mod.rs  privilege.rs  rules.rs  state.rs
tests/: cli_integration.rs
